# digit-recog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  handwriting_network.js
.github/scripts/: deploy.sh
.github/workflows/: pr.yaml  push.yaml
apache2/: apache2.conf  mysite.conf  ports.conf
aws/: ecs-params.yml  install_ecs_cli.sh
env/: env-ec2
html/: handwriting_network.js  index.html  index.php  machine.php  neural_network.js  polly_ajax.php
html/css/: mystyle.css
html/lib/aws_php_sdk/: aws-autoloader.php
nginx/: mime.types  nginx.conf
shell/: dc.sh  extract_secret.sh  store_secret.sh
src/: CMakeLists.txt  handwritten_digit_analyzer.cc  handwritten_digit_analyzer.h  main.cc  matrix.h  neural_network.cc  neural_network.h
